--- a/src/main/resources/assets/examplemod/lang/en_US.lang
+++ b/src/main/resources/assets/examplemod/lang/en_US.lang
@@ -1,3 +1,4 @@
 item.examplemod_TestItem.name=Test Item
 tile.examplemod_TestBlock.name=Test Block
 tile.examplemod_SuperTestBlock.name=Super Test Block
+tile.examplemod_TestPartialBlock.name=Fancy Lamp
