--- a/src/main/resources/assets/examplemod/lang/de_DE.lang
+++ b/src/main/resources/assets/examplemod/lang/de_DE.lang
@@ -1,4 +1,4 @@
 item.examplemod_TestItem.name=Test Item
 tile.examplemod_TestBlock.name=Test Block
 tile.examplemod_SuperTestBlock.name=Super Test Block
-tile.examplemod_TestPartialBlock.name=Fancy Lamp
+tile.examplemod_TestPartialBlock.name=Knorke Lampe
