Unrefined Testium, will disappear after a while

--- a/src/main/resources/assets/examplemod/lang/en_US.lang
+++ b/src/main/resources/assets/examplemod/lang/en_US.lang
@@ -5,3 +5,4 @@ tile.examplemod_TestBlock.name=Test Block
 tile.examplemod_SuperTestBlock.name=Super Test Block
 tile.examplemod_TestPartialBlock.name=Fancy Lamp
 tile.examplemod_ExplodingBlock.name=Unstable Testium
+tile.examplemod_UnrefinedTestium.name=Unrefined Testium
