Work in progress

--- a/src/main/resources/assets/examplemod/lang/en_US.lang
+++ b/src/main/resources/assets/examplemod/lang/en_US.lang
@@ -6,3 +6,4 @@ tile.examplemod_SuperTestBlock.name=Super Test Block
 tile.examplemod_TestPartialBlock.name=Fancy Lamp
 tile.examplemod_ExplodingBlock.name=Unstable Testium
 tile.examplemod_UnrefinedTestium.name=Unrefined Testium
+tile.examplemod_TestiumStorage.name=Testium Storage
